added some styles

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @import 'tailwindcss';
+@theme {
+  --breakpoint-nav: 1155px;
+}
 @plugin "daisyui" {
   themes: light;
 }
@@ -7,22 +10,4 @@
   default: true;
   --color-primary: #028355;
   --color-secondary: teal;
-}
-
-ul li {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-ul li a {
-  padding: 0.3rem 1rem;
-  border-radius: 55px;
-  font-weight: 600;
-}
-
-a.active{
-  background: green;
-  color: white;
-  font-weight: bold;
 }
